app-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose --file docker-compose.yml --volumes hostPath convert
    kompose.version: 1.19.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: app
  name: app
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose --file docker-compose.yml --volumes hostPath convert
        kompose.version: 1.19.0 ()
      creationTimestamp: null
      labels:
        io.kompose.service: app
    spec:
      containers:
      - image: shtrm/toirus:v5.3
        name: app
        resources: {}
        volumeMounts:
        - mountPath: /var/www/toirus-srv
          name: app-hostpath0
      restartPolicy: Always
      volumes:
      - hostPath:
          path: /Users/mac/work/toirus-srv
        name: app-hostpath0
status: {}
