nginx-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    io.kompose.service: app
  name: nginx
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: app
    spec:
      containers:
      - image: openresty/openresty:alpine
        name: nginx
        ports:
        - containerPort: 81
        resources: {}
        volumeMounts:
           - mountPath: "/var/www/toirus-srv/html"
             subPath: html
             name: app-disk
           - mountPath: /etc/nginx/conf.d/
             name: config-volume
        lifecycle:
            postStart:
              exec:
                command: [curl "http://nginx:81/control-panel/create-service?sid=1&hash=997df25747a0297d0ce6f558913661ea"]
      restartPolicy: Always
      volumes:
        - name: app-disk
          persistentVolumeClaim:
            claimName: app-disk
        - name: config-volume
          configMap:
            name: conf-nginx2
status: {}
