redis-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose --file docker-compose.yml --volumes hostPath convert
    kompose.version: 1.19.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: redis
  name: redis
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose --file docker-compose.yml --volumes hostPath convert
        kompose.version: 1.19.0 ()
      creationTimestamp: null
      labels:
        io.kompose.service: redis
    spec:
      containers:
      - command:
        - redis-server
        - --appendonly
        - "yes"
        image: redis
        name: redis
        ports:
        - containerPort: 6379
        resources: {}
        volumeMounts:
            - mountPath: "/var/lib/redis"
              subPath: "redis"
              name: redis-disk
      volumes:
        - name: redis-disk
          persistentVolumeClaim:
            claimName: redis-disk
      restartPolicy: Always
status: {}
