app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app
  labels:
    app: app
spec:
  selector:
    app: app
  ports:
  - protocol: TCP
    port: 9000
  selector:
    app: app
status:
  loadBalancer: {}
