ingress-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress
  namespace: kube-system
spec:
  ports:
    - port: 81
      name: http
    - port: 443
      name: https
  selector:
    k8s-app: nginx-ingress-controller
  type: LoadBalancer
  #externalIPs:
  #- 127.0.0.1
