loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx
  name: nginx-svc
  namespace: default
spec:
  type: LoadBalancer  # use LoadBalancer as type here
  #type: NodePort
  ports:
    - port: 81
  selector:
    app: nginx
