nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  type: NodePort
  ports:
  - name: "81"
    port: 81
    targetPort: 81
  - name: "82"
    port: 82
    targetPort: 82
  selector:
    io.kompose.service: nginx
status:
  loadBalancer: {}
