node-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: node
  name: node
spec:
  ports:
  - name: "3000"
    port: 3000
    targetPort: 3000
  selector:
    app: node
status:
  loadBalancer: {}
