ingress-deploy.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: myingress  
  annotations:    
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/rewrite-target: /
spec:  
  rules:
  - http:
      paths:      
      - path: /
        backend:
          serviceName: nginx
          servicePort: 81
